--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </div>
 
     <div class="container-port">
-      <h3 class="portafolio-h3">Portafolio</h3>
+      <h2 class="portafolio-h3">Portafolio</h2>
       <div class="portafolio">
         <div>
           <p><span>Beauty app</span></p>
@@ -152,7 +152,7 @@
     </div>
 
     <div class="container-contac">
-      <h3 class="h3-cont">Contacto</h3>
+      <h2 class="portafolio-hh2">Contacto</h2>
       <div class="contacto">
         <div class="icon-cont">
           <img src="./Íconos/phone.svg" alt="" />
