--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
 
     <div class="container-contac">
-      <h2 class="portafolio-hh2">Contacto</h2>
+      <h2 class="portafolio-hh2 portafolio-h3">Contacto</h2>
       <div class="contacto">
         <div class="icon-cont">
           <img src="./Íconos/phone.svg" alt="" />
