--- a/index.html
+++ b/index.html
@@ -15,159 +15,161 @@
       src="https://kit.fontawesome.com/4f4a15fa29.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav class="nav-desktop">
-      <a class="active" href="#">Home</a>
-      <a href="#">Experiencia y habilidades</a>
-      <a href="#">Portafolio</a>
-      <a href="#">Contacto</a>
-    </nav>
-    <nav class="nav-mobile">
-      <i class="fa-solid fa-bars"></i>
-    </nav>
+    <div class="container-nav">
+      <nav class="nav-desktop">
+        <a href="#"><span>Home</span></a>
+        <a href="#">Experiencia y habilidades</a>
+        <a href="#">Portafolio</a>
+        <a href="#">Contacto</a>
+      </nav>
+      <nav class="nav-mobile">
+        <i class="fa-solid fa-bars"></i>
+      </nav>
+    </div>
 
-    <div class="container-home">
-      <div class="home-text">
-        <h1 class="h1-desktop">
-          Design <br />
-          experience
-        </h1>
-        <h1 class="h1-mobile">Design experience</h1>
-        <p class="home-p">
-          Lorem ipsum dolor sit amet consectetur<br />
-          adipisicing elit.
-        </p>
-        <p><span>+5 años</span> de experiencia</p>
-        <div class="icon-redes">
-          <a href="#"><img src="./Íconos/linkedin.svg" alt="" /></a>
-          <a href="#"><img src="./Íconos/instagram.svg" alt="" /></a>
-          <a href="#"><img src="./Íconos/twitter.svg" alt="" /></a>
+    <div class="container">
+      <div class="home">
+        <div class="text-home">
+          <h1 class="h1-desktop">
+            Design<br />
+            experience
+          </h1>
+          <h1 class="h1-mobile">Design experience</h1>
+          <p class="home-p">
+            Lorem, ipsum dolor sit amet consectetur<br />
+            adipisicing elit.
+          </p>
+          <p><span>+5 años</span> de experiencia</p>
+          <div class="icon-redes-home">
+            <a href="#"
+              ><img class="icon-redes" src="./Íconos/linkedin.svg" alt=""
+            /></a>
+            <a href="#"
+              ><img class="icon-redes" src="./Íconos/instagram.svg" alt=""
+            /></a>
+            <a href="#"
+              ><img class="icon-redes" src="./Íconos/twitter.svg" alt=""
+            /></a>
+          </div>
+          <div class="img-mobile">
+            <img src="./Imágenes/photo mobile.png" alt="" />
+          </div>
+          <button>
+            <div><img src="./Íconos/mail 1.svg" alt="" /></div>
+            <div><a href="#">Contactame</a></div>
+          </button>
         </div>
-        <img class="img-mobile" src="./Imágenes/photo mobile.png" alt="" />
-        <button>
-          <div><img src="./Íconos/mail 1.svg" alt="" /></div>
-          <div><a href="#">Contactame</a></div>
-        </button>
-      </div>
-      <div>
-        <img class="img-desktop" src="./Imágenes/photo desktop.png" alt="" />
+        <div class="img-desktop">
+          <img src="./Imágenes/photo desktop.png" alt="" />
+        </div>
       </div>
     </div>
 
-    <div class="exp-hab">
-      <div class="content-exp-hab">
-        <div class="exp-content">
-          <h2 class="h2-exp">
-            Experiencia y <br />
-            habilidades
-          </h2>
-          <p>Lorem, ipsum dolor sit amet consectetur <br />adipisicing elit.</p>
-        </div>
-        <div class="exp-años">
-          <div>
+    <div class="exp-color">
+      <div class="container">
+        <div class="experiencia">
+          <div class="exp">
+            <h2>Experiencia y <br />habilidades</h2>
+            <br />
+            <p class="exp-p">
+              Lorem ipsum dolor sit, amet consectetur<br />
+              adipisicing elit.
+            </p>
+          </div>
+          <div class="exp-años">
             <h3>Experiencia</h3>
             <div class="años">
+              <div><p>2016 - 2018</p></div>
               <div>
-                <p>2016 - 2018</p>
-              </div>
-              <div class="años-der">
                 <h3>Visual designer</h3>
                 <p>Wizeline</p>
               </div>
             </div>
             <div class="linea"></div>
-          </div>
-
-          <div>
             <div class="años">
+              <div><p>2018 - 2019</p></div>
               <div>
-                <p>2018 - 2019</p>
-              </div>
-              <div class="años-der">
-                <h3>Product desigber</h3>
+                <h3>Product designer</h3>
                 <p>Microsoft</p>
               </div>
             </div>
             <div class="linea"></div>
-          </div>
-
-          <div>
             <div class="años">
+              <div><p>2019 - 2021</p></div>
               <div>
-                <p>2019 - 2021</p>
-              </div>
-              <div class="años-der">
-                <h3>Ul Engineer</h3>
+                <h3>Ul Enginner</h3>
                 <p>Google</p>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="habilidades">
-        <h3 class="portafolio-h3">Habilidades</h3>
-        <div class="icon-hab">
-          <div>
-            <img src="./Íconos/mobile.svg" alt="" />
-            <p>Mobile app design</p>
-          </div>
-          <div>
-            <img src="./Íconos/motion.svg" alt="" />
-            <p>Motion Design</p>
-          </div>
-          <div>
-            <img src="./Íconos/material.svg" alt="" />
-            <p>
-              Creacion y<br />
-              mantenimiento de<br />
-              sistemas de diseño
-            </p>
-          </div>
-          <div>
-            <img src="./Íconos/design.svg" alt="" />
-            <p>Gestion de proyexyos</p>
+          <div class="habilidades">
+            <h3>Habilidades</h3>
+            <div class="hab-icons">
+              <div>
+                <img src="./Íconos/mobile.svg" alt="" />
+                <p>Mobile app design</p>
+              </div>
+              <div>
+                <img src="./Íconos/motion.svg" alt="" />
+                <p>Motion Design</p>
+              </div>
+              <div>
+                <img src="./Íconos/material.svg" alt="" />
+                <p>
+                  Creacion y<br />
+                  mantenimiento de<br />
+                  sistemas de diseño
+                </p>
+              </div>
+              <div>
+                <img src="./Íconos/design.svg" alt="" />
+                <p>
+                  Gestion de<br />
+                  proyectos
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container-port">
-      <h2 class="portafolio-h3">Portafolio</h2>
+    <div class="container">
+      <h2 class="portafolio h2-port">Portafolio</h2>
       <div class="portafolio">
         <div>
           <p><span>Beauty app</span></p>
           <img src="./Imágenes/ejemplo 3.png" alt="" />
         </div>
         <div>
-          <p><span>Training app</span></p>
-          <img src="./Imágenes/ejemplo 1.png" alt="" />
+          <p class="p-port"><span>Training app</span></p>
+          <img class="port-img" src="./Imágenes/ejemplo 1.png" alt="" />
         </div>
         <div>
-          <p><span>Hotel app</span></p>
-          <img src="./Imágenes/ejemplo 2.png" alt="" />
+          <p class="p-port"><span>Hotel app</span></p>
+          <img class="port-img" src="./Imágenes/ejemplo 2.png" alt="" />
         </div>
       </div>
     </div>
 
-    <div class="container-contac">
-      <h2 class="portafolio-hh2 portafolio-h3">Contacto</h2>
+    <div class="container contac">
+      <h2>Contacto</h2>
       <div class="contacto">
-        <div class="icon-cont">
+        <div class="icon-contac">
           <img src="./Íconos/phone.svg" alt="" />
           <h3>Numero celular</h3>
           <p>5526895424</p>
         </div>
-        <div class="icon-cont">
+        <div class="icon-contac">
           <img src="./Íconos/mail.svg" alt="" />
           <h3>Email</h3>
           <p>example@correo.com</p>
         </div>
       </div>
-      <div class="msj-fin">
-        <p><span>Hecho con ♥ en Academlo</span></p>
-      </div>
+      <div class="msj-end"><span>Echo con ♥ en Academlo</span></div>
     </div>
   </body>
 </html>
