--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       src="https://kit.fontawesome.com/4f4a15fa29.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
